SOFTWARE_FACTORY/infra-gitops/apps/fago-api/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fago-api
  namespace: prod
  labels:
    app: fago-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fago-api
  template:
    metadata:
      labels:
        app: fago-api
    spec:
      containers:
        - name: app
          image: nginx:stable-alpine
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
